--- a/style/theme.css
+++ b/style/theme.css
@@ -34,6 +34,11 @@ body {
 
 button {
     border: none;
+    background-color: var(--c1);
+    color: var(--c4);
+    font-size: 2rem;
+    border: 4px var(--c3) solid;
+    width: 20em;
 }
 
 svg {
