--- a/style/index.css
+++ b/style/index.css
@@ -79,3 +79,10 @@ section {
     margin: 4em;
     gap: 1em;
 }
+
+
+@media (max-width: 50em) {
+    #question-section .wrapper h1 {
+        font-size: 2rem;
+    }
+}
