--- a/style/theme.css
+++ b/style/theme.css
@@ -57,12 +57,14 @@ h1 {
     color: var(--c4);
     font-size: 4rem;
     margin: 0;
+    text-align: center;
 }
 
 p {
     color: var(--c4);
     font-size: 1.5rem;
     margin: 0;
+    text-align: center;
 }
 
 hr {
