--- a/style/index.css
+++ b/style/index.css
@@ -38,7 +38,7 @@ section {
 
 #line {
     position: fixed;
-    top: 540px;
+    top: 530px;
     width: 100%;
     height: 40px;
 }
@@ -49,6 +49,25 @@ section {
     left: 10%;
     width: 40px;
     height: 40px;
+}
+
+#scan {
+    position: fixed;
+    top: 500px;
+    left: 10%;
+    width: 40px;
+    height: 1000px;
+    z-index: -1;
+    background-color: rgb(252, 165, 165);
+}
+
+#cover {
+    position: fixed;
+    top: 540px;
+    left: 10%;
+    width: 40px;
+    height: 1000px;
+    z-index: 0;
 }
 
 #obstical {
